refactor: 移除药物库存管理相关功能和页面
删除药物库存管理的云函数、页面及相关样式，简化项目结构
移除与药物库存相关的图标和工具函数，清理未使用的代码

--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -253,17 +253,14 @@
 }
 
 /* 状态样式 */
-.medicine-normal,
-.checkup-normal {
+.medicine-normal {
     color: var(--success-color);
 }
 
-.medicine-warning,
-.checkup-warning {
+.medicine-warning {
     color: var(--warning-color);
 }
 
-.medicine-danger,
-.checkup-danger {
+.medicine-danger {
     color: var(--danger-color);
 }
